--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "waifuconvert-backend",
   "version": "1.0.0",
-  "description": "WaifuConvert Backend API",
+  "description": "WaifuConvert Backend - Gothic Anime Video Converter API",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "node index.js",
+    "build": "echo 'Build completed'",
+    "start": "node index.js",
+    "lint": "echo 'No linting configured'",
+    "test": "node index.js"
   },
   "dependencies": {
-    "express": "4.18.2",
-    "cors": "2.8.5"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "18.x"
-  }
-}
+  },
+  "keywords": ["video-converter", "youtube-downloader", "mp3-converter", "mp4-converter", "yt-dlp", "waifuconvert"],
+  "author": "WaifuConvert",
+  "license": "MIT"
