--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "waifuconvert-backend",
-  "version": "7.0.0",
-  "description": "WaifuConvert Backend - Hybrid Edition",
-  "main": "index-hybrid.js",
+  "version": "1.0.0",
+  "description": "WaifuConvert Backend Simple",
+  "main": "index.js",
   "scripts": {
-    "start": "node index-hybrid.js",
-    "dev": "node index-hybrid.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
