--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
   "name": "waifuconvert-backend",
-  "version": "1.0.0",
-  "description": "WaifuConvert Backend Simple",
+  "version": "2.0.0",
+  "description": "WaifuConvert Backend - Railway Optimized",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "node index.js",
+    "build": "echo 'Build completed'",
+    "start": "node index.js",
+    "lint": "echo 'No linting configured'",
+    "test": "node --version && python3 --version && yt-dlp --version",
+    "health": "curl -f http://localhost:8080/health || exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=16.0.0"
-  }
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "video-converter",
+    "youtube-downloader",
+    "mp3-converter",
+    "mp4-converter",
+    "yt-dlp",
+    "waifuconvert",
+    "railway"
+  ],
+  "author": "WaifuConvert",
+  "license": "MIT"
 }
